--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="./style.css">
+    <script src="./script.js" defer></script>
 </head>
 <body>
     <div class="game">
         <div class="cellContainer">
-            <div cellIndex="0" class="cell" onclick="input()">X</div>
-            <div cellIndex="1" class="cell">X</div>
-            <div cellIndex="2" class="cell">X</div>
-            <div cellIndex="3" class="cell">O</div>
-            <div cellIndex="4" class="cell">X</div>
-            <div cellIndex="5" class="cell">O</div>
-            <div cellIndex="6" class="cell">X</div>
-            <div cellIndex="7" class="cell">O</div>
-            <div cellIndex="9" class="cell">X</div>
+            <div cellIndex="0" class="cell" onclick="input()"></div>
+            <div cellIndex="1" class="cell" onclick="input()"></div>
+            <div cellIndex="2" class="cell" onclick="input()"></div>
+            <div cellIndex="3" class="cell" onclick="input()"></div>
+            <div cellIndex="4" class="cell" onclick="input()"></div>
+            <div cellIndex="5" class="cell" onclick="input()"></div>
+            <div cellIndex="6" class="cell" onclick="input()"></div>
+            <div cellIndex="7" class="cell" onclick="input()"></div>
+            <div cellIndex="9" class="cell" onclick="input()"></div>
         </div>
         <h2 id="result"></h2>
     </div>
