Add buttons for X and O Add Manual Toggle buttons

--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
 </head>
 <body>
     <div class="game">
+        <button id="player1" onclick="player1()">Player 1</button>
         <div class="cellContainer">
-            <div cellIndex="0" class="cell" onclick="input()"></div>
-            <div cellIndex="1" class="cell" onclick="input()"></div>
-            <div cellIndex="2" class="cell" onclick="input()"></div>
-            <div cellIndex="3" class="cell" onclick="input()"></div>
-            <div cellIndex="4" class="cell" onclick="input()"></div>
-            <div cellIndex="5" class="cell" onclick="input()"></div>
-            <div cellIndex="6" class="cell" onclick="input()"></div>
-            <div cellIndex="7" class="cell" onclick="input()"></div>
-            <div cellIndex="9" class="cell" onclick="input()"></div>
+            <div cellIndex="0" class="cell" onclick="input(this)"></div>
+            <div cellIndex="1" class="cell" onclick="input(this)"></div>
+            <div cellIndex="2" class="cell" onclick="input(this)"></div>
+            <div cellIndex="3" class="cell" onclick="input(this)"></div>
+            <div cellIndex="4" class="cell" onclick="input(this)"></div>
+            <div cellIndex="5" class="cell" onclick="input(this)"></div>
+            <div cellIndex="6" class="cell" onclick="input(this)"></div>
+            <div cellIndex="7" class="cell" onclick="input(this)"></div>
+            <div cellIndex="9" class="cell" onclick="input(this)"></div>
         </div>
+        <button id="player2" onclick="player2()">Player 2</button>
         <h2 id="result"></h2>
     </div>
 </body>
