--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="game">
-        Select Starting player:
+        Select  player:
         <button id="player1" onclick="player1()">Player 1 - X</button>
         <button id="player2" onclick="player2()">Player 2 - O</button>
         <div class="cellContainer">
