--- a/index.html
+++ b/index.html
@@ -8,22 +8,27 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-    <div class="game">
-        Select  player:
-        <button id="player1" onclick="player1()">Player 1 - X</button>
-        <button id="player2" onclick="player2()">Player 2 - O</button>
-        <div class="cellContainer">
-            <div cellIndex="0" class="cell" onclick="input(this)"></div>
-            <div cellIndex="1" class="cell" onclick="input(this)"></div>
-            <div cellIndex="2" class="cell" onclick="input(this)"></div>
-            <div cellIndex="3" class="cell" onclick="input(this)"></div>
-            <div cellIndex="4" class="cell" onclick="input(this)"></div>
-            <div cellIndex="5" class="cell" onclick="input(this)"></div>
-            <div cellIndex="6" class="cell" onclick="input(this)"></div>
-            <div cellIndex="7" class="cell" onclick="input(this)"></div>
-            <div cellIndex="8" class="cell" onclick="input(this)"></div>
+    <div class="title">
+        Tic Tac Toe!
+    </div>
+    <div class="gameDiv">
+        <div class="game">
+            Select  player:
+            <button id="player1" onclick="player1()">Player 1 - X</button>
+            <button id="player2" onclick="player2()">Player 2 - O</button>
+            <div class="cellContainer">
+                <div cellIndex="0" class="cell" onclick="input(this)"></div>
+                <div cellIndex="1" class="cell" onclick="input(this)"></div>
+                <div cellIndex="2" class="cell" onclick="input(this)"></div>
+                <div cellIndex="3" class="cell" onclick="input(this)"></div>
+                <div cellIndex="4" class="cell" onclick="input(this)"></div>
+                <div cellIndex="5" class="cell" onclick="input(this)"></div>
+                <div cellIndex="6" class="cell" onclick="input(this)"></div>
+                <div cellIndex="7" class="cell" onclick="input(this)"></div>
+                <div cellIndex="8" class="cell" onclick="input(this)"></div>
+            </div>
+            <h2 id="result"></h2>
         </div>
-        <h2 id="result"></h2>
     </div>
 </body>
 </html>
